# CppBacktester

./: README.md  test2.csv  test3.csv  user-config.jam
Algorithms/: LogReg.cpp  LogReg.hpp  algo.hpp  lasso.cpp  lasso.hpp  signature.cpp  signature.hpp
DataStructures/: DLL.hpp  DStest.cpp  LOB.cpp  LOB.hpp  t  t.d  test.cpp
DataStructures/t.dSYM/Contents/Resources/DWARF/: t
DataStructures/t.dSYM/Contents/Resources/Relocations/aarch64/: t.yml
Environ/: -t  -t.d  CMakeLists.txt  MPortfolio.cpp  MPortfolio.hpp  MRStrategy.cpp  MRStrategy.hpp  Makefile  TSAStrategy.cpp  TSAStrategy.hpp  data.cpp  data.hpp  event.cpp  event.hpp  eventDatautils.hpp  execution.cpp  execution.hpp  graphUtils.cpp  graphUtils.hpp  portfolio.cpp  portfolio.hpp  reader.cpp  reader.hpp  sample  strategy.cpp  strategy.hpp  t  te  test.cpp  test.hpp  test.py  while.cpp  while.hpp
Environ/TSA/: DB.cpp  DB.hpp  sampleACF.cpp  sampleACF.hpp  testTSA.cpp
Environ/graphing/: -t  graphUtils.hpp
Environ/multiPort/: complexWhile.cpp  complexWhile.hpp
Environ/sample.dSYM/Contents/Resources/DWARF/: sample
Environ/sample.dSYM/Contents/Resources/Relocations/aarch64/: sample.yml
HistoricData/: test.csv  test2.csv
