cmake_minimum_required(VERSION 3.10)
project(CppBacktester)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(APP_DOMAIN ./domain)
set(APP_CALC ./calc)
#set(CMAKE_PREFIX_PATH /Users/evankirkiles/Qt/5.11.1/clang_64)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Boost 1.88 COMPONENTS filesystem regex)
find_package( Boost REQUIRED COMPONENTS regex system date_time )
IF (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIR})

    add_executable(CppBacktester data.cpp)
    target_link_libraries(CppBacktester Boost::filesystem Boost::regex)
endif()
find_package(CURL REQUIRED)
IF (CURL_FOUND)
    include_directories(${CURL_INCLUDE_DIRS})
    target_link_libraries(CppBacktester ${CURL_LIBRARIES})
endif()
#find_package(Qt5Widgets REQUIRED)
#IF (Qt5Widgets_FOUND)
#    include_directories(${Qt5Widgets_INCLUDE_DIRS})
#    target_link_libraries(CppBacktester ${Qt5Widgets_LIBRARIES})
#endif()

include_directories(${APP_DOMAIN})
include_directories(${APP_CALC})